Updated main css file. Made body a flex container

--- a/main.css
+++ b/main.css
@@ -9,6 +9,8 @@ html {
 body {
     background-color: purple;
     overflow-x: hidden;
+    display: flex;
+    justify-content: center;
 }
 img {
     inline-size: 100%;
