--- a/main.css
+++ b/main.css
@@ -19,4 +19,8 @@ img {
     background-color: orange;
     inline-size: 100%;
     max-inline-size: 10rem;
+    text-align: center;
+}
+.slot__img {
+    display: flex;
 }
