--- a/main.css
+++ b/main.css
@@ -15,6 +15,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: .8rem;
 }
 img {
     inline-size: 100%;
@@ -25,6 +26,12 @@ img {
     background-color: orange;
     inline-size: 20rem;
     text-align: center;
+    padding: 1rem;
+    border-radius: 4px;
+    
+    &:not(:last-child){
+        margin-block-end: 1rem;
+    }
     }
     /* Slot image container */
     .slot__img {
@@ -33,6 +40,7 @@ img {
         grid-template-columns: repeat(3, 1fr);
         align-items: center;
         gap: 1rem;
+        padding: .5rem;
 }
 /* large image */
 .large-cherry {
